--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,11 +14,13 @@ jobs:
   goreleaser:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write
       packages: write
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        with:
+          depth: 0
 
       - name: Set up Go
         uses: actions/setup-go@v2
