--- a/.github/workflows/go_cov.yml
+++ b/.github/workflows/go_cov.yml
@@ -4,12 +4,10 @@ on:
   pull_request:
 
 jobs:
-
   build:
     name: Build and Unit Test
     runs-on: ubuntu-latest
     steps:
-
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
@@ -22,9 +20,7 @@ jobs:
         run: go build -v ./...
 
       - name: Test
-        run: go test -v -race -covermode=atomic -coverprofile=coverage.out ./...
+        run: go test -v -race -covermode=atomic -coverprofile=coverage.txt
 
-      - name: Upload Coverage
-        uses: shogo82148/actions-goveralls@v1
-        with:
-          path-to-profile: coverage.out
+      - name: Upload coverage to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
